--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15"
+
+[dependencies.tokio]
+version = "1.6"
+features = ["macros", "rt-multi-thread"]
+
+[dependencies.serenity]
+version = "0.10"
+features = ["model", "client", "rustls_backend", "gateway", "unstable_discord_api"]
+default-features = false
