--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 dotenv = "0.15"
 reqwest = "0.11"
 serde = "1.0"
+futures = "0.3"
+num-format = "0.4"
 
 [dependencies.tokio]
 version = "1.6"
